--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/CAMMS
 spring.datasource.username=root
-spring.datasource.password=H0348745668
+spring.datasource.password=123456789
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
