--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/camms_ver2
+spring.datasource.url=jdbc:mysql://localhost:3306/camms
 spring.datasource.username=root
 spring.datasource.password=123456789
 spring.jpa.hibernate.ddl-auto=none
