--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8080
+
+mail.username = nguyendinhhuynh1872000@gmail.com
+mail.password = H0348745668
+mail.smtp.auth = true
+mail.smtp.starttls.enable=true
+mail.smtp.host=smtp.gmail.com
+mail.smtp.port=587
+mail.smtp.starttls.required=true
