update forgot password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8080
 
 mail.username = nguyendinhhuynh1872000@gmail.com
-mail.password = H0348745668
+mail.password = fpxqpzwkujgmqczs
 mail.smtp.auth = true
 mail.smtp.starttls.enable=true
 mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
 mail.smtp.starttls.required=true
+mail.debug = true
